--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Biographien"}' />
@@ -41,20 +41,19 @@
 
             <div class="flex flex-col-reverse pb-20 md:flex-row">
                 <div class="w-full pt-3 md:w-2/5">
-                    <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_037.jpg" class="w-full" />
-                    <span class="block w-full text-left text-xs text-gray-800"
-                        >Bundesarchiv, Bild 183-1989-0507-020 / Wolfgang Thieme / CC-BY-SA 3.0</span
-                    >
+                    <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_049_bis.jpg" class="w-full" />
+                    <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Ngoc Bich Pfaff</span>
                 </div>
 
                 <div id="pfaff" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ngoc Bich Pfaff</h4>
                     <div class="text-left text-lg font-semibold">
-                        Ngoc Bich Pfaff wurde 1965 in Vietnam geboren. Mit 17 Jahren kam sie als Vertragsarbeiterin in die DDR, um in
-                        Schwarzenberg-Erzebirge zu arbeiten. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger
-                        und entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von deutschen Kolleg:innen und
-                        Betreur:innen konnte sie trotz Mutterschaft in der DDR bleiben und weiter arbeiten. 1987 heiratete Ngoc Bich Pfaff
-                        einen deutschen Mann für das Bleiberecht. Sie hat heute ihre eigene Schneiderei in Chemnitz, wo sie immer noch lebt.
+                        Ngoc Bich Pfaff wurde 1964 in Vietnam geboren. Mit 17 Jahren kam sie als Auszubildende in die DDR und arbeitete dann
+                        in Schwarzenberg-Erzebirge. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger und
+                        entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von einer deutschen Bekannten konnte sie trotz
+                        Mutterschaft in der DDR bleiben und weiter arbeiten. 1987 heiratete Ngoc Bich Pfaff einen deutschen Mann für das
+                        Bleiberecht. Sie hat heute ihre eigene Schneiderei in Chemnitz, wo sie immer noch lebt. Bichs Interviews: du bist
+                        ganz anders gesehen
                     </div>
 
                     <div class="my-2"><span class="font-semibold text-red-800">Bichs Interviews:</span> du bist ganz anders gesehen</div>
@@ -213,21 +212,21 @@
 
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="gotsch" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
-                    <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lam Gotsch</h4>
+                    <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lam Goltzsch</h4>
                     <div class="text-left text-lg font-semibold">
-                        Lam Gotsch wurde 1951 in Ho-Chi-Min-Stadt (heute Hanoi) geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo
-                        sie an der TU-Dresden Maschinenbau studierte. Lam Gotsch kam als Vertragsarbeiterin 1987 ein zweites Mal in die DDR.
-                        Sie arbeitete als Sprachvermittlerin im VEB Kombinat Textima in Karl-Marx-Stadt (heute Chemnitz). 1989 holte sie
-                        ihre jüngere Tochter in die DDR nach. 1992 hat Lam Gotsch geheiratet und damit den Aufenthaltstitel erhalten. Lam
-                        Gotsch lebt heute immer noch in Chemnitz, ihre beide Töchter arbeiten jeweils als Ärtzin und Steuerberaterin.
+                        Lam Goltzsch wurde 1951 in Hanoi geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo sie an der TU-Dresden
+                        Maschinenbau studierte. Lam Goltzsch kam als Vertragsarbeiterin 1987 ein zweites Mal in die DDR. Sie arbeitete als
+                        Sprachvermittlerin im VEB Kombinat Textima in KarlMarx-Stadt (heute Chemnitz). 1989 holte sie ihre jüngere Tochter
+                        in die DDR nach. 1992 hat Lam Goltzsch geheiratet und damit den Aufenthaltstitel erhalten. Lam Goltzsch lebt heute
+                        immer noch in Chemnitz, ihre beiden Töchter arbeiten jeweils als Ärtzin und Steuerberaterin.
                     </div>
 
                     <div class="my-2"><span class="font-semibold text-red-800">Lams Interviews:</span> ich bin jetzt glücklich</div>
                 </div>
 
                 <div class="w-full pt-3 md:w-2/5">
-                    <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_044.jpg" class="w-full" />
-                    <span class="block w-full text-right text-xs text-gray-800">Bundesarchiv, Bild 183-38600-0007 / CC-BY-SA 3.0</span>
+                    <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_050.jpg" class="w-full" />
+                    <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von Lam Goltzsch</span>
                 </div>
             </div>
 
