--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -271,7 +271,7 @@
                         <span class="font-semibold text-black"> Moises Interviews:</span>
                         <a href="./interviews/intrvw_mm01.html">der Rassismus wurde noch stärker</a> -
                         <a href="./interviews/intrvw_mm02.html">in diesem Land muss ich sterben</a> -
-                        <a href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a>
+                        <a href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a> -
                         <a href="./interviews/intrvw_mm04.html">die kannten keine Schwarzen</a>
                     </div>
                 </div>
