--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -105,9 +105,10 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-black">Dorina und Andreas Interviews:</span> weil die hier arbeiten wollten - es ist
-                        ein neues System - meine Arbeit nehmen die mir jetzt weg - wo kommen die Alle her - das nahm ja so Überhand - weg
-                        hier mit euch - manchmal war es für uns spannend - die waren so in ihrem Rausch
+                        <span class="font-semibold text-black">Dorina und Andreas' Interviews:</span>
+                        <a href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> - weil die hier arbeiten wollten - es
+                        ist ein neues System - meine Arbeit nehmen die mir jetzt weg - wo kommen die Alle her - das nahm ja so Überhand -
+                        weg hier mit euch - manchmal war es für uns spannend - die waren so in ihrem Rausch
                     </div>
                 </div>
             </div>
