--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -98,7 +98,7 @@
                         Dorina S. wurde 1969 geboren und wuchs in Rostock-Lichtenhagen auf. Nach der Lehre als Verkäuferin arbeitete sie ab
                         1988 als Betreuerin für geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Andreas S. wurde 1965 geboren und
                         wuchs mit fünf weiteren Geschwistern im Rostocker Hansa-Viertel auf. Bis zu einem Arbeitsunfall war er Facharbeiter
-                        für geologische Bohrung. Ab 1989 arbeitete er mit geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Über die
+                        für geologische Bohrung. Ab 1989 arbeitete er mit geistig behinderten Jugendlichen in Rostock-Lichtenhagen. Über die
                         gemeinsame Arbeit im Wohnheim für Menschen mit Behinderung lernten sich Dorina und Andreas S. kennen. Nach der
                         Geburt ihrer Tochter zogen sie 1990 nach Rostock-Lichtenhagen, wo sie im August 1992 Zeug:innen der Pogrome wurden.
                         Sie leben, nach wie vor, in der Nähe von Rostock-Lichtenhagen.
