--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -52,11 +52,13 @@
                         in Schwarzenberg-Erzebirge. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger und
                         entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von einer deutschen Bekannten konnte sie trotz
                         Mutterschaft in der DDR bleiben und weiter arbeiten. 1987 heiratete Ngoc Bich Pfaff einen deutschen Mann für das
-                        Bleiberecht. Sie hat heute ihre eigene Schneiderei in Chemnitz, wo sie immer noch lebt. Bichs Interviews: du bist
-                        ganz anders gesehen
+                        Bleiberecht. Sie hat heute ihre eigene Schneiderei in Chemnitz, wo sie immer noch lebt.
                     </div>
 
-                    <div class="my-2"><span class="font-semibold text-red-800">Bichs Interviews:</span> du bist ganz anders gesehen</div>
+                    <div class="my-2">
+                        <span class="font-semibold text-red-800">Bichs Interviews:</span>
+                        <a href="./interviews/intrvw_b_l01.html">du bist ganz anders gesehen</a>
+                    </div>
                 </div>
             </div>
 
@@ -76,7 +78,8 @@
                     <div class="my-2">
                         <span class="font-semibold text-black">Davids Interviews:</span>
                         <a href="./interviews/intrvw_dm01.html">wie ein Theater beobachtet</a> -
-                        <a href="./interviews/intrvw_dm02.html">Besuch bekommen</a> - ich bin nur ein Mensch
+                        <a href="./interviews/intrvw_dm02.html">Besuch bekommen</a> -
+                        <a href="./interviews/intrvw_dm04.html">ich war ein richtiger Sklave</a>
                     </div>
                 </div>
 
@@ -106,9 +109,13 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Dorina und Andreas' Interviews:</span>
-                        <a href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> - weil die hier arbeiten wollten - es
-                        ist ein neues System - meine Arbeit nehmen die mir jetzt weg - wo kommen die Alle her - das nahm ja so Überhand -
-                        weg hier mit euch - manchmal war es für uns spannend - die waren so in ihrem Rausch
+                        <a href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> -
+                        <a href="./interviews/intrvw_a_d02.html">wir wollten das ja letzten Endes</a> -
+                        <a href="./interviews/intrvw_a_d03.html">meine Arbeit nehmen die mir jetzt weg</a> -
+                        <a href="./interviews/intrvw_a_d04.html">die ganze Struktur zerbrach</a> -
+                        <a href="./interviews/intrvw_a_d05.html">das nahm ja so Überhand</a> -
+                        <a href="./interviews/intrvw_a_d08.html">die waren so in ihrem Rausch</a> -
+                        <a href="./interviews/intrvw_a_d06.html">das wollten wir doch nicht</a>
                     </div>
                 </div>
             </div>
@@ -222,7 +229,10 @@
                         immer noch in Chemnitz, ihre beiden Töchter arbeiten jeweils als Ärtzin und Steuerberaterin.
                     </div>
 
-                    <div class="my-2"><span class="font-semibold text-red-800">Lams Interviews:</span> ich bin jetzt glücklich</div>
+                    <div class="my-2">
+                        <span class="font-semibold text-black">Lams Interview:</span>
+                        <a href="./interviews/intrvw_b_l02.html">Heimat hin oder her</a>
+                    </div>
                 </div>
 
                 <div class="w-full pt-3 md:w-2/5">
@@ -289,14 +299,12 @@
                     <span class="block w-full text-left text-xs text-gray-800">Bundesarchiv, Bild 183-H0612-0301-020/CC-BY-SA 3.0</span>
                 </div>
 
-                <div id="sieglinder" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
-                    <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Sieglinde R.</h4>
+                <div id="siglinder" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
+                    <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Siglinde R.</h4>
                     <div class="text-left text-lg font-semibold">
-                        Sieglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der
+                        Siglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der
                         Plattenbausiedlung Rostock-Lichtenhagen. Sie lebt heute im Sonnenblumehochhaus in Rostock-Lichtenhagen.
                     </div>
-
-                    <div class="my-2"><span class="font-semibold text-red-800">Sieglindes Interviews:</span> xxx</div>
                 </div>
             </div>
 
