--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -323,8 +323,7 @@
                         <span class="font-semibold text-black"> Silke und Dennis Interviews:</span>
                         <a href="./interviews/intrvw_ot01.html">es war nicht böse gemeint</a> -
                         <a href="./interviews/intrvw_ot02.html">dieser Begriff „Vertragsarbeiter“</a> -
-                        <a href="./interviews/intrvw_ot03.html">wir waren immer sicher</a> - die Möglichkeit hatten wir gar nicht - es war
-                        so ein wirre Zeit
+                        <a href="./interviews/intrvw_ot03.html">wir waren immer sicher</a>
                     </div>
                 </div>
 
