--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -13,7 +13,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="munjunga" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Augusto Jone Munjunga</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-ajm" class="text-left text-lg font-semibold">
                         Augusto Jone Munjunga wurde 1965 in Angola geboren. Nach dem Militärdienst arbeitete er als Finanzkaufmann im
                         Staatsministerium der Provinz Benguela. Mit der Vorstellung zu studieren kam Augusto 1987, als 22 Jähriger in die
                         DDR. Statt des Studiums wurde er im SVKE [Schlacht- und Verarbeitungskominat Eberswalde] als Vertragsarbeiter
@@ -26,23 +26,27 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Augustos Interviews:</span>
-                        <a href="./interviews/intrvw_ajm01.html">ab heute hier ist das euer Arbeitsplatz</a> -
-                        <a href="./interviews/intrvw_ajm02.html">das ist moderne Sklaverei</a> -
-                        <a href="./interviews/intrvw_ajm03.html">ich dachte ihr seit schon weg</a> -
-                        <a href="./interviews/intrvw_ajm04.html">es war wirklich so</a>
+                        <a data-lang-key="bio-ajm-iview-1" href="./interviews/intrvw_ajm01.html">ab heute hier ist das euer Arbeitsplatz</a>
+                        - <a data-lang-key="bio-ajm-iview-2" href="./interviews/intrvw_ajm02.html">das ist moderne Sklaverei</a> -
+                        <a data-lang-key="bio-ajm-iview-3" href="./interviews/intrvw_ajm03.html">ich dachte ihr seit schon weg</a> -
+                        <a data-lang-key="bio-ajm-iview-4" href="./interviews/intrvw_ajm04.html">es war wirklich so</a>
                     </div>
                 </div>
 
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_036.jpg" class="aspect-auto w-full" />
-                    <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von Augusto Jone Munjunga</span>
+                    <span class="block w-full text-right text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Augusto Jone Munjunga</span
+                    >
                 </div>
             </div>
 
             <div class="flex flex-col-reverse pb-20 md:flex-row">
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_049_bis.jpg" class="w-full" />
-                    <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Ngoc Bich Pfaff</span>
+                    <span class="block w-full text-left text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Ngoc Bich Pfaff</span
+                    >
                 </div>
 
                 <div id="pfaff" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
@@ -85,7 +89,9 @@
 
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_038.jpg" class="w-full" />
-                    <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von David Macou</span>
+                    <span class="block w-full text-right text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> David Macou</span
+                    >
                 </div>
             </div>
 
@@ -145,7 +151,9 @@
             <div class="flex flex-col-reverse pb-20 md:flex-row">
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_041.jpg" class="w-full" />
-                    <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Ibraimo Alberto</span>
+                    <span class="block w-full text-left text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Ibraimo Alberto</span
+                    >
                 </div>
 
                 <div id="alberto" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
@@ -198,7 +206,9 @@
             <div class="flex flex-col-reverse pb-20 md:flex-row">
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_043.jpg" class="w-full" />
-                    <span class="block w-full text-left text-xs text-gray-800">Aus dem Archiv von Augusto Jone Munjunga</span>
+                    <span class="block w-full text-left text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Augusto Jone Munjunga</span
+                    >
                 </div>
 
                 <div id="kordulas" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
@@ -237,7 +247,9 @@
 
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_050.jpg" class="w-full" />
-                    <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von Lam Goltzsch</span>
+                    <span class="block w-full text-right text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Lam Goltzsch</span
+                    >
                 </div>
             </div>
 
@@ -289,7 +301,9 @@
 
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_046.jpg" class="w-full" />
-                    <span class="block w-full text-right text-xs text-gray-800">Aus dem Archiv von Augusto Jone Munjunga</span>
+                    <span class="block w-full text-right text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Augusto Jone Munjunga</span
+                    >
                 </div>
             </div>
 
