--- a/src/html/bio.html
+++ b/src/html/bio.html
@@ -51,7 +51,7 @@
 
                 <div id="pfaff" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ngoc Bich Pfaff</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-bl" class="text-left text-lg font-semibold">
                         Ngoc Bich Pfaff wurde 1964 in Vietnam geboren. Mit 17 Jahren kam sie als Auszubildende in die DDR und arbeitete dann
                         in Schwarzenberg-Erzebirge. Entgegen der Bestimmungen für den Aufenthalt wurde Ngoc Bich Pfaff schwanger und
                         entschied sich 1986 ihre Tochter zu bekommen. Mit der Unterstütztung von einer deutschen Bekannten konnte sie trotz
@@ -61,7 +61,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-red-800">Bichs Interviews:</span>
-                        <a href="./interviews/intrvw_b_l01.html">du bist ganz anders gesehen</a>
+                        <a data-lang-key="bio-bl-iview-1" href="./interviews/intrvw_b_l01.html">du bist ganz anders gesehen</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="macou" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">David Macou</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-dm" class="text-left text-lg font-semibold">
                         David Macou wurde 1959 in Mosambik geboren. 1979 kam er mit 19 Jahren, als einer der ersten mozambikanischen
                         Vertragsarbeiter:innen, in die DDR. Er arbeitete im VEB Braunkohlewerk Welzow [Schwarze Pumpe]. Mit polnischen,
                         vietnamesischen und mosambikanischen Vertragsarbeiter:innen lebte er im Wohnheim in Hoyerswerda. Unter dem Beifall
@@ -81,9 +81,9 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Davids Interviews:</span>
-                        <a href="./interviews/intrvw_dm01.html">wie ein Theater beobachtet</a> -
-                        <a href="./interviews/intrvw_dm02.html">Besuch bekommen</a> -
-                        <a href="./interviews/intrvw_dm04.html">ich war ein richtiger Sklave</a>
+                        <a data-lang-key="bio-dm-iview-1" href="./interviews/intrvw_dm01.html">wie ein Theater beobachtet</a> -
+                        <a data-lang-key="bio-dm-iview-2" href="./interviews/intrvw_dm02.html">Besuch bekommen</a> -
+                        <a data-lang-key="bio-dm-iview-3" href="./interviews/intrvw_dm04.html">ich war ein richtiger Sklave</a>
                     </div>
                 </div>
 
@@ -103,7 +103,7 @@
 
                 <div id="dorinasandreass" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Dorina und Andreas S.</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-ad" class="text-left text-lg font-semibold">
                         Dorina S. wurde 1969 geboren und wuchs in Rostock-Lichtenhagen auf. Nach der Lehre als Verkäuferin arbeitete sie ab
                         1988 als Betreuerin für geistigbehinderte Jugendlichen in Rostock-Lichtenhagen. Andreas S. wurde 1965 geboren und
                         wuchs mit fünf weiteren Geschwistern im Rostocker Hansa-Viertel auf. Bis zu einem Arbeitsunfall war er Facharbeiter
@@ -114,14 +114,14 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-black">Dorina und Andreas' Interviews:</span>
-                        <a href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> -
-                        <a href="./interviews/intrvw_a_d02.html">wir wollten das ja letzten Endes</a> -
-                        <a href="./interviews/intrvw_a_d03.html">meine Arbeit nehmen die mir jetzt weg</a> -
-                        <a href="./interviews/intrvw_a_d04.html">die ganze Struktur zerbrach</a> -
-                        <a href="./interviews/intrvw_a_d05.html">das nahm ja so Überhand</a> -
-                        <a href="./interviews/intrvw_a_d08.html">die waren so in ihrem Rausch</a> -
-                        <a href="./interviews/intrvw_a_d06.html">das wollten wir doch nicht</a>
+                        <span class="font-semibold text-black">Dorina & Andreas' Interviews:</span>
+                        <a data-lang-key="bio-ad-iview-1" href="./interviews/intrvw_a_d01.html">ein freundschaftliches Verhältnis</a> -
+                        <a data-lang-key="bio-ad-iview-2" href="./interviews/intrvw_a_d02.html">wir wollten das ja letzten Endes</a> -
+                        <a data-lang-key="bio-ad-iview-3" href="./interviews/intrvw_a_d03.html">meine Arbeit nehmen die mir jetzt weg</a> -
+                        <a data-lang-key="bio-ad-iview-4" href="./interviews/intrvw_a_d04.html">die ganze Struktur zerbrach</a> -
+                        <a data-lang-key="bio-ad-iview-5" href="./interviews/intrvw_a_d05.html">das nahm ja so Überhand</a> -
+                        <a data-lang-key="bio-ad-iview-6" href="./interviews/intrvw_a_d08.html">die waren so in ihrem Rausch</a> -
+                        <a data-lang-key="bio-ad-iview-7" href="./interviews/intrvw_a_d06.html">das wollten wir doch nicht</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="nam" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Duong Hoai Nam</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-dhn" class="text-left text-lg font-semibold">
                         1958 wurde Duong Hoai Nam wurde in Vietnam geboren. Duong Hoai Nam ist während dem Vietnamkrieg aufgewachsen und kam
                         1988 als Vertragsarbeiter in die DDR. Von 1988 bis 1991 war er vollbeschäftigt in einem Kombinat in Karl-Marx-Stadt
                         (heute Chemnitz). Heute lebt er in Leipzig, arbeitet als Trainer in seinem eigenen Kampfsport Studio und ist
@@ -138,7 +138,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Hoais Interviews:</span>
-                        <a href="./interviews/intrvw_dhn01.html">ich liebe Deutschland</a>
+                        <a data-lang-key="bio-dhn-iview-1" href="./interviews/intrvw_dhn01.html">ich liebe Deutschland</a>
                     </div>
                 </div>
 
@@ -158,7 +158,7 @@
 
                 <div id="alberto" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Ibraimo Alberto</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-ia" class="text-left text-lg font-semibold">
                         Ibraimo Alberto wurde 1963 in Mosambik geboren. Er kam 1981 für ein Studium in die DDR, statt dessen wurde er im VEB
                         Fleischkombinat Berlin als Vertragsarbeiter eingesetzt und als Fleischer ausgebildet. Nach einem kurzen Aufenthalt
                         in Mosambik kam Ibraimo Alberto zurück in die DDR. Für das VEB Glaswerk Stralau arbeitete er als Gruppenleiter der
@@ -171,8 +171,11 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Ibraimos Interviews:</span>
-                        <a href="./interviews/intrvw_ia01.html">die Gesellschaft war nicht so interessiert</a> -
-                        <a href="./interviews/intrvw_ia02.html">was guckst du</a>
+                        <a data-lang-key="bio-ia-iview-1" href="./interviews/intrvw_ia01.html"
+                            >die Gesellschaft war nicht so interessiert</a
+                        >
+                        -
+                        <a data-lang-key="bio-ia-iview-2" href="./interviews/intrvw_ia02.html">was guckst du</a>
                     </div>
                 </div>
             </div>
@@ -180,7 +183,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="jankrenek" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Jan K. und René K.</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-jr" class="text-left text-lg font-semibold">
                         Jan K. wurde 1968, René K. 1976 geboren. Im September 1991 waren beide Teil der Masse in Hoyerswerda, die das
                         Wohnheim für Vertragsarbeiter:innen und die Geflüchtetenunterkunft angriff. Heute sind Jan K. und René K. engagierte
                         Mitglieder des VVN-BdA [Vereinigung der Verfolgten des Naziregimes – Bund der Antifaschistinnen und Antifaschisten
@@ -189,9 +192,9 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black"> Jan und René Interviews:</span>
-                        <a href="./interviews/intrvw_jr01.html">das ist im Osten Politik gewesen</a> -
-                        <a href="./interviews/intrvw_jr02.html">es gab keine Grenze</a> -
-                        <a href="./interviews/intrvw_jr03.html">Hoyerswerda hat den Anfang gemacht</a>
+                        <a data-lang-key="bio-jr-iview-1" href="./interviews/intrvw_jr01.html">das ist im Osten Politik gewesen</a> -
+                        <a data-lang-key="bio-jr-iview-2" href="./interviews/intrvw_jr02.html">es gab keine Grenze</a> -
+                        <a data-lang-key="bio-jr-iview-3" href="./interviews/intrvw_jr03.html">Hoyerswerda hat den Anfang gemacht</a>
                     </div>
                 </div>
 
@@ -213,7 +216,7 @@
 
                 <div id="kordulas" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Kordula S.</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-ks" class="text-left text-lg font-semibold">
                         Kordula S. wurde 1960 in Eberswalde geboren. Sie arbeitet bis 1991 im SVKE [Schlacht- und Verarbeitungskominat
                         Eberswalde], dort war sie unter anderem als Betreuerin der angolanischen und mosambikanischen Vertragsarbeiter:innen
                         beschäftigt. 2000 gründete Kordula S. ihr eigenes Bestattungsunternehmen. Seit 1999 ist sie Mitglied der PDS, jetzt
@@ -223,7 +226,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Kordulas Interview:</span>
-                        <a href="./interviews/intrvw_ks01.html">für mich war das ein Unfall</a>
+                        <a data-lang-key="bio-ks-iview-1" href="./interviews/intrvw_ks01.html">für mich war das ein Unfall</a>
                     </div>
                 </div>
             </div>
@@ -231,7 +234,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="gotsch" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lam Goltzsch</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-lg" class="text-left text-lg font-semibold">
                         Lam Goltzsch wurde 1951 in Hanoi geboren. Direkt nach dem Abitur 1968 kam sie in die DDR, wo sie an der TU-Dresden
                         Maschinenbau studierte. Lam Goltzsch kam als Vertragsarbeiterin 1987 ein zweites Mal in die DDR. Sie arbeitete als
                         Sprachvermittlerin im VEB Kombinat Textima in KarlMarx-Stadt (heute Chemnitz). 1989 holte sie ihre jüngere Tochter
@@ -241,7 +244,7 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black">Lams Interview:</span>
-                        <a href="./interviews/intrvw_b_l02.html">Heimat hin oder her</a>
+                        <a data-lang-key="bio-lg-iview-1" href="./interviews/intrvw_b_l02.html">Heimat hin oder her</a>
                     </div>
                 </div>
 
@@ -256,12 +259,14 @@
             <div class="flex flex-col-reverse pb-20 md:flex-row">
                 <div class="w-full pt-3 md:w-2/5">
                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_045.jpg" class="w-full" />
-                    <span class="block w-full text-left text-xs text-gray-800">Archivbild von Hayo von Reyhe</span>
+                    <span class="block w-full text-left text-xs text-gray-800"
+                        ><span data-lang-key="bio-archive-text">Aus dem Archiv von</span> Hayo von Reyhe</span
+                    >
                 </div>
 
                 <div id="seifert" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Lan und Huu Loi Bin Seifert</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-ls" class="text-left text-lg font-semibold">
                         Lan Seifert wurde 1970 und Loi Bin Seifert wurde 1965 geboren. Beide wuchsen in Vietnam auf und kamen 1988 als
                         Vetragsarbeiter:innen in die DDR. Lan und Huu Loi Bin Seifert waren im VEB Leuchtenbau Leipzig tätig, wo sie sich
                         kennen lernten. Nach der Wende heirateten sie und bekamen einen Sohn. Aus Rationalisierungsgründen konnten nicht
@@ -271,8 +276,8 @@
                     </div>
 
                     <div class="my-2">
-                        <span class="font-semibold text-black">Lan und Lois Interviews:</span>
-                        <a href="./interviews/intrvw_ls01.html">das ist normal</a>
+                        <span class="font-semibold text-black">Lan & Lois Interviews:</span>
+                        <a data-lang-key="bio-ls-iview-1" href="./interviews/intrvw_ls01.html">das ist normal</a>
                     </div>
                 </div>
             </div>
@@ -280,7 +285,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="mvuama" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Moises Mvuama</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-mm" class="text-left text-lg font-semibold">
                         1966 wurde Moises Mvuama in Angola geboren. Mit dem Wunsch, vier oder acht Jahre, eine Aussbildung als
                         Schiffsmechaniker zu absolvieren kam er 1987 in die DDR. Mit 21 Jahren wurde er in der Schlosserei des SVKEs
                         [Schlacht- und Verarbeitungskominat Eberswalde] ausgebildet und arbeitete bis 1990 als Vertragsarbeiter in
@@ -292,10 +297,10 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black"> Moises Interviews:</span>
-                        <a href="./interviews/intrvw_mm01.html">der Rassismus wurde noch stärker</a> -
-                        <a href="./interviews/intrvw_mm02.html">in diesem Land muss ich sterben</a> -
-                        <a href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a> -
-                        <a href="./interviews/intrvw_mm04.html">die kannten keine Schwarzen</a>
+                        <a data-lang-key="bio-mm-iview-1" href="./interviews/intrvw_mm01.html">der Rassismus wurde noch stärker</a> -
+                        <a data-lang-key="bio-mm-iview-2" href="./interviews/intrvw_mm02.html">in diesem Land muss ich sterben</a> -
+                        <a data-lang-key="bio-mm-iview-3" href="./interviews/intrvw_mm03.html">heute habe ich dieses Trauma nicht mehr</a> -
+                        <a data-lang-key="bio-mm-iview-4" href="./interviews/intrvw_mm04.html">die kannten keine Schwarzen</a>
                     </div>
                 </div>
 
@@ -315,7 +320,7 @@
 
                 <div id="siglinder" class="w-full pl-0 text-lg md:w-3/5 md:pl-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Siglinde R.</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-sr" class="text-left text-lg font-semibold">
                         Siglinde R. wurde 1942 geboren. 1977 war sie mit ihrer Familie eine der ersten Mieter:innen in der
                         Plattenbausiedlung Rostock-Lichtenhagen. Sie lebt heute im Sonnenblumehochhaus in Rostock-Lichtenhagen.
                     </div>
@@ -325,7 +330,7 @@
             <div class="flex flex-col pb-20 md:flex-row">
                 <div id="silkedenniso" class="w-full pr-0 text-lg md:w-3/5 md:pr-10">
                     <h4 class="my-2 w-1/4 min-w-fit text-xl font-bold text-red-800">Silke und Dennis O.</h4>
-                    <div class="text-left text-lg font-semibold">
+                    <div data-lang-key="bio-ot" class="text-left text-lg font-semibold">
                         Silke O. wurde in Hoyerswerda, Dennis O. wurde in Queklenburg geboren, beide sind Jahrgang 1963. Dennis O. hat Silke
                         O. 1984 währen seinem Militärdienst bei der Marine kennengelernt. Im Aschluss zog Dennis O. 1985 nach Hoyerswerda um
                         Silke O. zu heiraten. Silke O. arbeitete als Krippenerzieherin in einem Dauerheim und Dennis O. war im VEB
@@ -335,9 +340,9 @@
 
                     <div class="my-2">
                         <span class="font-semibold text-black"> Silke und Dennis Interviews:</span>
-                        <a href="./interviews/intrvw_ot01.html">es war nicht böse gemeint</a> -
-                        <a href="./interviews/intrvw_ot02.html">dieser Begriff „Vertragsarbeiter“</a> -
-                        <a href="./interviews/intrvw_ot03.html">wir waren immer sicher</a>
+                        <a data-lang-key="bio-ot-iview-1" href="./interviews/intrvw_ot01.html">es war nicht böse gemeint</a> -
+                        <a data-lang-key="bio-ot-iview-2" href="./interviews/intrvw_ot02.html">dieser Begriff „Vertragsarbeiter“</a> -
+                        <a data-lang-key="bio-ot-iview-3" href="./interviews/intrvw_ot03.html">wir waren immer sicher</a>
                     </div>
                 </div>
 
